--- a/Stagecast/Stagecast/Base.lproj/Main.storyboard
+++ b/Stagecast/Stagecast/Base.lproj/Main.storyboard
@@ -183,11 +183,12 @@
                                     <action selector="OnExitButtonClicked:" destination="tEW-Hg-IeX" eventType="touchUpInside" id="gEX-ch-s5d"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="L I V E" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KEx-eX-cIJ">
-                                <rect key="frame" x="26" y="43.5" width="70" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LIVE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KEx-eX-cIJ">
+                                <rect key="frame" x="26" y="39" width="100" height="30"/>
                                 <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="70" id="pQ4-ce-Sx3"/>
+                                    <constraint firstAttribute="width" constant="100" id="pQ4-ce-Sx3"/>
+                                    <constraint firstAttribute="height" constant="30" id="tJg-eT-Cwn"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
